force-app/main/default/objects/Account/fields/AccountContactRelationSum__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRelationSum__c</fullName>
    <label>AccountContactRelationSum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>