force-app/main/default/objects/Account/fields/Business_Users__c.field-meta.xml
<CustomField>
    <fullName>Business_Users__c</fullName>
    <description>Contains the number of related contacts with the role &quot;Business User&quot;</description>
    <label>Business Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>