force-app/main/default/objects/Account/fields/ContactsSum__c.field-meta.xml
<CustomField>
    <fullName>ContactsSum__c</fullName>
    <description>Sum of all the contacts that an Account has. Is updated by Trigger.</description>
    <label>ContactsSum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>