force-app/main/default/objects/Account/fields/Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Decision_Makers__c</fullName>
    <description>Contains the number of related contacts with the role &quot;Decision Maker&quot;</description>
    <label>Decision Makers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>