force-app/main/default/objects/Account/fields/OpportunitiesSum__c.field-meta.xml
<CustomField>
    <fullName>OpportunitiesSum__c</fullName>
    <description>Sum of all the opportunities that an Account has. Is updated by Trigger.</description>
    <label>OpportunitiesSum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>